# bindep-test

./: .gitignore  Cargo.toml  README.md
bindep/: Cargo.toml
bindep/src/: main.rs
check-diff-target/: Cargo.toml
check-explicit-target/: Cargo.toml
check-host-target/: Cargo.toml
check-host-target/src/: main.rs
featuredep/: Cargo.toml
featuredep/src/: lib.rs
incorporator/: Cargo.toml
incorporator/src/: lib.rs
unrelated/: Cargo.toml
