[package]
name = "incorporator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindep-host = { path = "../bindep", artifact = "bin", package = "bindep", optional = true }
featuredep = { path = "../featuredep", features = ["foo"] }
tempfile = "3.8"

[target.x86_64-pc-windows-msvc.dependencies]
bindep-diff = { path = "../bindep", artifact = "bin", target = "i686-pc-windows-msvc", package = "bindep", optional = true }
bindep-explicit = { path = "../bindep", artifact = "bin", target = "x86_64-pc-windows-msvc", package = "bindep", optional = true }

[target.x86_64-pc-windows-gnu.dependencies]
bindep-diff = { path = "../bindep", artifact = "bin", target = "i686-pc-windows-gnu", package = "bindep", optional = true }
bindep-explicit = { path = "../bindep", artifact = "bin", target = "x86_64-pc-windows-gnu", package = "bindep", optional = true }

[target.x86_64-unknown-linux-gnu.dependencies]
bindep-diff = { path = "../bindep", artifact = "bin", target = "i686-unknown-linux-gnu", package = "bindep", optional = true }
bindep-explicit = { path = "../bindep", artifact = "bin", target = "x86_64-unknown-linux-gnu", package = "bindep", optional = true }

[target.x86_64-unknown-linux-musl.dependencies]
bindep-diff = { path = "../bindep", artifact = "bin", target = "i686-unknown-linux-musl", package = "bindep", optional = true }
bindep-explicit = { path = "../bindep", artifact = "bin", target = "x86_64-unknown-linux-musl", package = "bindep", optional = true }

[target.i686-pc-windows-msvc.dependencies]
bindep-explicit = { path = "../bindep", artifact = "bin", target = "i686-pc-windows-msvc", package = "bindep", optional = true }

[target.aarch64-apple-darwin.dependencies]
bindep-explicit = { path = "../bindep", artifact = "bin", target = "aarch64-apple-darwin", package = "bindep", optional = true }

[target.x86_64-apple-darwin.dependencies]
bindep-explicit = { path = "../bindep", artifact = "bin", target = "x86_64-apple-darwin", package = "bindep", optional = true }

[features]
diff = ["dep:bindep-diff"]
host = ["dep:bindep-host"]
explicit = ["dep:bindep-explicit"]
